[workspace]
resolver = "2"
members = ["c-fdleak", "c-fdleak-common", "c-fdleak-ebpf"]
default-members = ["c-fdleak", "c-fdleak-common"]

[workspace.dependencies]
aya = { version = "0.13.0", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.18.0", default-features = false }
clap = { version = "4.5.20" }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }
blazesym = "0.2.0-rc.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.release.package.c-fdleak-ebpf]
debug = 2
codegen-units = 1
