[package]
name = "c-fdleak-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
c-fdleak-common = { path = "../c-fdleak-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "c-fdleak"
path = "src/main.rs"
